# ds-cookiecutter

./: README.md  cookiecutter.json  dev-requirements.txt  requirements.txt
{{ cookiecutter.repo_name }}/: .gitignore  README.md  setup.cfg  setup.py
{{ cookiecutter.repo_name }}/binder/: requirements.txt
{{ cookiecutter.repo_name }}/docker/: Dockerfile  prod.Dockerfile
{{ cookiecutter.repo_name }}/models/: predict_model.py
{{ cookiecutter.repo_name }}/rest/: server.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.repo_name }}/tasks/: __init__.py  docker.py  internal.py
