[metadata]
name = {{ cookiecutter.package_name }}
description = {{ cookiecutter.description }}
url = {{ cookiecutter.project_url }}
author = {{ cookiecutter.author_name }}
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
package_dir = =src
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools_scm
install_requires =
    pandas

[options.packages.find]
where = src
